# mrsmap

./: CMakeLists.txt  LICENSE  README.md  make_eclipseproject.sh  package.xml
cmake/Modules/: FindMRSMap.cmake  FindOctreeLib.cmake
include/mrsmap/: mrsmap_api.h  mrsslam_api.h
include/mrsmap/map/: multiresolution_surfel_map.h  nodevalue.h  shapetexture_feature.h  surfel.h  surfelpair.h
include/mrsmap/map/impl/: multiresolution_surfel_map.hpp
include/mrsmap/registration/: multiresolution_soft_surfel_registration.h  multiresolution_surfel_initial_alignment.h  multiresolution_surfel_registration.h
include/mrsmap/registration/impl/: multiresolution_surfel_registration.hpp
include/mrsmap/slam/: slam.h
include/mrsmap/utilities/: RandomMultivariateGaussian.hpp  eigen_extensions.h  geometry.h  grids.h  logging.h  utilities.h
include/mrsmap/visualization/: visualization_map.h  visualization_slam.h
src/map/: multiresolution_surfel_map.cpp  nodevalue.cpp  shapetexture_feature.cpp  surfel.cpp  surfelpair.cpp
src/registration/: multiresolution_soft_surfel_registration.cpp  multiresolution_surfel_initial_alignment.cpp  multiresolution_surfel_registration.cpp
src/slam/: slam.cpp
src/tools/evaluation/: evaluate_pose_tracking.cpp  evaluate_slam.cpp  evaluate_visual_odometry.cpp  evaluate_visual_odometry_batch.cpp
src/utilities/: utilities.cpp
src/visualization/: visualization_map.cpp  visualization_slam.cpp
